--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "SpaceBattle",
+  "name": "MultiPlayerServer",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A demo of a Multi Player NodeJS Game Server integrated with a Physics Engine.",
+  "main": "server.js",
   "scripts": {},
-  "author": "",
-  "license": "MIT",
+  "author": "Nick Barth",
+  "license": "WTFPL",
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "p2": "^0.5.0",
     "socket.io": "^0.9.16"
